<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:fitsSystemWindows="false">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/gothammedium_font"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotice" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/gothammedium_font"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toEndOf="@+id/etPassword"
        app:srcCompat="@drawable/ic_eyeshow" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gothammedium_font"
        android:onClick="OnLogin"
        android:text="Login"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gothammedium_font"
        android:onClick="OpenReg"
        android:text="Register"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textViewNotice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/gothambook_font"
        android:text="@string/notice_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUPLogo" />

    <TextView
        android:id="@+id/textViewDeveloper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/gothambook_font"
        android:lineSpacingExtra="5sp"
        android:text="@string/notice_developer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gothambook_font"
        android:lineSpacingExtra="5sp"
        android:text="@string/notice_contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeveloper" />

    <ImageView
        android:id="@+id/imageUPLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageBanner"
        app:layout_constraintEnd_toStartOf="@+id/imageUPRILogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up" />

    <ImageView
        android:id="@+id/imageUPRILogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageNCPAGLogo"
        app:layout_constraintStart_toEndOf="@+id/imageUPLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upri" />

    <ImageView
        android:id="@+id/imageNCPAGLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageSafeTravelPHLogo"
        app:layout_constraintStart_toEndOf="@+id/imageUPRILogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ncpag" />

    <ImageView
        android:id="@+id/imageSafeTravelPHLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageNCPAGLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/safetravelph" />

    <ImageView
        android:id="@+id/imageBanner"
        android:layout_width="463dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNotice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageUPLogo"
        app:srcCompat="@drawable/banner" />

    <ImageView
        android:id="@+id/imageDOTrLTFRBLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewContact"
        app:srcCompat="@drawable/dotr_ltfrb" />

</androidx.constraintlayout.widget.ConstraintLayout>